# testflightTracker

./: .gitignore  config.tmpl  logger.py  loghelper.py  main.py  notify.py  pyproject.toml
